package ec.edu.espe.farmsimulator.utils;

import java.util.Date;

/**
 *
 * @author Esteban Quiroga
 */
public class Datos {
    
    String id;
    String name;
    String color;
    int ageInMonths;
    String bornOnDate;
    String notMolting;

    public String getId() {
        return id;
    }

    public void setId(String id) {
        this.id = id;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

    public String getColor() {
        return color;
    }

    public void setColor(String color) {
        this.color = color;
    }

    public int getAgeInMonths() {
        return ageInMonths;
    }

    public void setAgeInMonths(int ageInMonths) {
        this.ageInMonths = ageInMonths;
    }

    public String getBornOnDate() {
        return bornOnDate;
    }

    public void setBornOnDate(String bornOnDate) {
        this.bornOnDate = bornOnDate;
    }

    public String getNotMolting() {
        return notMolting;
    }

    public void setNotMolting(String notMolting) {
        this.notMolting = notMolting;
    }

    

    
    
}
